Put flag on custom domain UI and fixed button option spacing in save dialog

--- a/libsrc/scss/dialogs.scss
+++ b/libsrc/scss/dialogs.scss
@@ -460,6 +460,7 @@ form.login {
             width: 30px;
             vertical-align: middle
         }
+        label { margin-right: 10px; }
     }
 }
 #menu_privacy .selected { display : none; }
